Istio/lab02 - Ingress and Egress Gateways Implementation/httpbin-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: test-app
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
